--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-psycopg2==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
 pytest==8.3.5
 pytest-asyncio==0.25.3
 SQLAlchemy==2.0.38
+psycopg2==2.9.10
+asyncpg==0.30.0
