--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,62 @@
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.4.26
+cffi==1.17.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.3
+dependency-injector==4.46.0
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+fastapi-cli==0.0.7
+greenlet==3.2.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+Jinja2==3.1.6
+jwt==1.3.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+packaging==25.0
+pluggy==1.5.0
+pyasn1==0.4.8
+pycparser==2.22
+Pygments==2.19.1
+python-dotenv==1.1.0
+python-multipart==0.0.20
+PyYAML==6.0.2
+rich==14.0.0
+rich-toolkit==0.14.5
+rsa==4.9.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.2
+typer==0.15.3
+typing_extensions==4.13.2
+tzdata==2025.2
+uvicorn==0.34.2
+watchfiles==1.0.5
+websockets==15.0.1
+## The following requirements were added by pip freeze:
+asyncpg==0.30.0
+Faker==37.0.0
+fastapi==0.115.12
+fastapi-utils==0.8.0
+mypy_extensions==1.1.0
+psutil==5.9.8
+psycopg2==2.9.10
 pydantic==2.10.6
+pydantic-settings==2.9.1
 pydantic_core==2.27.2
 pytest==8.3.5
 pytest-asyncio==0.25.3
+python-jose==3.4.0
 SQLAlchemy==2.0.38
-psycopg2==2.9.10
-asyncpg==0.30.0
-faker==37.0.0
+typing-inspect==0.9.0
+typing-inspection==0.4.0
